--- a/RealThread_STMH750-ART-Pi.yaml
+++ b/RealThread_STMH750-ART-Pi.yaml
@@ -72,7 +72,7 @@ features_zh:
 template_projects:
 - project_name: art_pi_blink_led
   project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
+  project_type: rt-thread|@full|@5.1.0
   builtin_files:
   - source_path_offset: projects/art_pi_blink_led
     target_path_offset: ''
@@ -98,7 +98,7 @@ template_projects:
 example_projects: 
 - project_name: art_pi_blink_led
   project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
+  project_type: rt-thread|@full|@5.1.0
   builtin_files:
   - source_path_offset: projects/art_pi_blink_led
     target_path_offset: ''
@@ -121,11 +121,11 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []
-- project_name: art_pi_rust
+- project_name: art_pi_bootloader
   project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
+  project_type: rt-thread|@full|@5.1.0
   builtin_files:
-  - source_path_offset: projects/art_pi_rust
+  - source_path_offset: projects/art_pi_bootloader
     target_path_offset: ''
     files_and_folders:
     - "*"
@@ -146,11 +146,11 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []    
-- project_name: art_pi_bootloader
+- project_name: art_pi_lvgl_demo
   project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
+  project_type: rt-thread|@full|@5.1.0
   builtin_files:
-  - source_path_offset: projects/art_pi_bootloader
+  - source_path_offset: projects/art_pi_lvgl_demo
     target_path_offset: ''
     files_and_folders:
     - "*"
@@ -159,6 +159,10 @@ example_projects:
     files_and_folders:
     - libraries
     - rt-thread
+  - source_path_offset: 'debug/stldr'
+    target_path_offset: 'board/stldr'
+    files_and_folders:
+    - ART-Pi_W25Q64.stldr
   external_files:
   - package_type: Chip_Support_Packages
     package_vendor: RealThread
@@ -166,12 +170,12 @@ example_projects:
     package_version: 0.1.9
     source_path_offset: ''
     target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_mcuboot
+    files_and_folders: []    
+- project_name: art_pi_sdcard
   project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
+  project_type: rt-thread|@full|@5.1.0
   builtin_files:
-  - source_path_offset: projects/art_pi_mcuboot
+  - source_path_offset: projects/art_pi_sdcard
     target_path_offset: ''
     files_and_folders:
     - "*"
@@ -188,9 +192,34 @@ example_projects:
     source_path_offset: ''
     target_path_offset: ''
     files_and_folders: []    
+- project_name: art_pi_uf2
+  project_description: creat this peoject if user choose rt-thread project
+  project_type: rt-thread|@full|@5.1.0
+  builtin_files:
+  - source_path_offset: projects/art_pi_uf2
+    target_path_offset: ''
+    files_and_folders:
+    - "*"
+  - source_path_offset: ''
+    target_path_offset: ''
+    files_and_folders:
+    - libraries
+    - rt-thread
+  - source_path_offset: 'debug/stldr'
+    target_path_offset: 'board/stldr'
+    files_and_folders:
+    - ART-Pi_W25Q64.stldr
+  external_files:
+  - package_type: Chip_Support_Packages
+    package_vendor: RealThread
+    package_name: STM32H7
+    package_version: 0.1.9
+    source_path_offset: ''
+    target_path_offset: ''
+    files_and_folders: []
 - project_name: art_pi_wifi
   project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
+  project_type: rt-thread|@full|@5.1.0
   builtin_files:
   - source_path_offset: projects/art_pi_wifi
     target_path_offset: ''
@@ -205,358 +234,6 @@ example_projects:
     target_path_offset: 'board/stldr'
     files_and_folders:
     - ART-Pi_W25Q64.stldr
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: industry_io_gateway
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/industry_io_gateway
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  - source_path_offset: 'debug/stldr'
-    target_path_offset: 'board/stldr'
-    files_and_folders:
-    - ART-Pi_W25Q64.stldr
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_net_player
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_net_player
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  - source_path_offset: 'debug/stldr'
-    target_path_offset: 'board/stldr'
-    files_and_folders:
-    - ART-Pi_W25Q64.stldr
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_gc0328c_camera
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_gc0328c_camera
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: lrs007_lora_radio
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/lrs007_lora_radio
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: lrs007_lorawan_end_device
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/lrs007_lorawan_end_device
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_sensor485_app
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_sensor485_app
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_qboot
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_qboot
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: uf2_boot
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: bare-metal|@notUsed|@notUsed
-  builtin_files:
-  - source_path_offset: projects/uf2_boot
-    target_path_offset: ''
-    files_and_folders:
-    - ".settings"
-    - "Core"
-    - "Drivers"
-    - "GCC"
-    - "Middlewares"
-    - "USB_DEVICE"
-    - ".cproject"
-    - ".project"
-    - "makefile.targets"
-    - "README.md"
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_nes
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_nes
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_kboot
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_kboot
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: art_pi_lvgl
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_lvgl
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  - source_path_offset: 'debug/stldr'
-    target_path_offset: 'board/stldr'
-    files_and_folders:
-    - ART-Pi_W25Q64.stldr
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []    
-- project_name: art_pi_fibocom_l610
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/art_pi_fibocom_l610
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: lrs007_lora_gw_driver
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/lrs007_lora_gw_driver
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: lrs007_lora_loopback
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/lrs007_lora_loopback
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: lrs007_lora_pkt_sniffer
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/lrs007_lora_pkt_sniffer
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
-  external_files:
-  - package_type: Chip_Support_Packages
-    package_vendor: RealThread
-    package_name: STM32H7
-    package_version: 0.1.9
-    source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders: []
-- project_name: lrs007_lorawan_gateway
-  project_description: creat this peoject if user choose rt-thread project
-  project_type: rt-thread|@full|@4.1.0
-  builtin_files:
-  - source_path_offset: projects/lrs007_lorawan_gateway
-    target_path_offset: ''
-    files_and_folders:
-    - "*"
-  - source_path_offset: ''
-    target_path_offset: ''
-    files_and_folders:
-    - libraries
-    - rt-thread
   external_files:
   - package_type: Chip_Support_Packages
     package_vendor: RealThread
